# pronto

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  action.yml  artifact.lock.hash  build.rs  cx.lock.hash  deny.toml  pixi.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: 0_bug.yml  config.yml
.github/workflows/: build.yml  ci.yml  docs.yml  release.yml  zizmor.yml
crates/cx-build/src/: main.rs
crates/pronto/: Cargo.toml
crates/pronto/src/: main.rs
docs/: configuration.md  index.md  roadmap.md
docs/explanation/: artifact-layout-tradeoffs.md  concepts.md  install-locations-and-ownership.md  manifests-and-conda-plugin.md  project-boundaries.md  runtime-template.md  source-locks-and-runtime-locks.md  trust-and-provenance.md
docs/how-to/: build-in-github-actions.md  build-locally.md  build-offline-artifacts.md  choose-artifact-layout.md  customize-runtime.md  package-a-runtime.md  troubleshoot-builds.md  verify-release-artifacts.md
docs/reference/: artifacts.md  cli.md  conda-plugin.md  configuration.md  environment-variables.md  errors.md  github-action.md  release-assets.md  runtime-cli.md  runtime-data-format.md
docs/tutorials/: custom-delegate-runtime.md  first-runtime.md  github-action-runtime.md
python/conda_pronto/: __init__.py  cli.py  plugin.py
python/tests/: test_cli.py  test_plugin.py
src/: cli.rs  commands.rs  config.rs  exec.rs  install.rs  main.rs  policy.rs  runtime_data.rs
src/snapshots/: cx__config__tests__embedded_config.snap  cx__config__tests__frozen.snap  pronto_runtime__config__tests__condarc.snap  pronto_runtime__config__tests__embedded_config.snap  pronto_runtime__config__tests__frozen.snap
tests/: cli_integration.rs  conda_prompt_stdout_pipe_regression.rs  exclude_integration.rs
tests/snapshots/: cli_integration__cx_help.snap  cli_integration__runtime_help.snap
