[workspace]
members = [".", "crates/cx-build"]
default-members = [".", "crates/cx-build"]

[package]
name = "conda-express"
version = "0.6.0"
edition = "2024"
description = "A lightweight, single-binary conda bootstrapper — powered by rattler"
license = "BSD-3-Clause"
readme = "README.md"

[[bin]]
name = "cx"
path = "src/main.rs"

[features]
default = ["rustls-tls"]
native-tls = [
  "reqwest/native-tls",
  "rattler/native-tls",
  "rattler_repodata_gateway/native-tls",
  "rattler_networking/native-tls",
  "rattler_cache/native-tls",
]
rustls-tls = [
  "reqwest/rustls-tls",
  "reqwest/rustls-tls-native-roots",
  "rattler/rustls-tls",
  "rattler_repodata_gateway/rustls-tls",
  "rattler_networking/rustls-tls",
  "rattler_cache/rustls-tls",
]
online_tests = []
slow_tests = []

[dependencies]
clap = { version = "4.6", features = ["derive"] }
console = "0.16"
dirs = "6"
futures = "0.3"
indicatif = "0.18"
miette = { version = "7.6", features = ["fancy"] }
rattler = { version = "0.40", default-features = false, features = ["indicatif"] }
rattler_cache = { version = "0.6", default-features = false }
rattler_conda_types = { version = "0.44", default-features = false }
rattler_lock = { version = "0.27", default-features = false }
rattler_networking = { version = "0.26", default-features = false }
rattler_repodata_gateway = { version = "0.27", default-features = false, features = ["gateway"] }
rattler_solve = { version = "5.0", default-features = false, features = ["resolvo"] }
rattler_virtual_packages = { version = "2.3", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
reqwest-middleware = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
toml = "1.1"
tar = "0.4"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zstd = "0.13"

[build-dependencies]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"

[dev-dependencies]
assert_cmd = "2"
assert_matches = "1"
insta = { version = "1", features = ["yaml"] }
predicates = "3"
rstest = "0.26"
temp-env = "0.3"
tempfile = "3"
