[workspace]
members = ["."]
default-members = ["."]

[package]
name = "conda-ship"
version = "0.1.0"
edition = "2024"
description = "Build ready-to-run conda runtimes"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/jezdez/conda-ship"
homepage = "https://jezdez.github.io/conda-ship/"
documentation = "https://jezdez.github.io/conda-ship/"
keywords = ["conda", "bootstrap", "installer", "runtime"]
include = [
  "/Cargo.lock",
  "/Cargo.toml",
  "/CHANGELOG.md",
  "/LICENSE",
  "/pixi.toml",
  "/README.md",
  "/src/*.rs",
  "/src/bin/*.rs",
  "/src/bin/cs/*.rs",
  "/src/snapshots/*.snap",
  "/tests/*.rs",
  "/tests/snapshots/*.snap",
]
publish = false
default-run = "cs"

[[bin]]
name = "conda-ship-runtime"
path = "src/main.rs"
required-features = ["runtime-template"]

[[bin]]
name = "cs"
path = "src/bin/cs.rs"

[features]
default = ["rustls-tls"]
native-tls = [
  "reqwest/native-tls",
  "rattler/native-tls",
  "rattler_networking/native-tls",
  "rattler_cache/native-tls",
]
rustls-tls = [
  "dep:rustls",
  "reqwest/rustls-no-provider",
  "rustls/ring",
]
online_tests = []
runtime-template = []

[dependencies]
clap = { version = "4.6", features = ["derive"] }
console = "0.16"
dirs = "6"
futures = "0.3"
indicatif = "0.18"
miette = { version = "7.6", features = ["fancy"] }
rattler = { version = "0.43", default-features = false, features = ["indicatif"] }
rattler_cache = { version = "0.8", default-features = false }
rattler_conda_types = { version = "0.46", default-features = false }
rattler_lock = { version = "0.30", default-features = false }
rattler_networking = { version = "0.27", default-features = false }
reqwest = { version = "0.13", default-features = false, features = ["stream"] }
reqwest-middleware = { package = "astral-reqwest-middleware", version = "0.5" }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
toml = "1.1"
tar = "0.4"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zstd = "0.13"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"

[dev-dependencies]
assert_cmd = "2"
assert_matches = "1"
insta = { version = "1", features = ["yaml"] }
predicates = "3"
rstest = "0.26"
temp-env = "0.3"
tempfile = "3"
