[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "conda-pronto"
version = "0.1.0"
description = "Conda plugin entry point for the conda-pronto bootstrap binary builder."
requires-python = ">=3.10"
readme = "README.md"
license = "BSD-3-Clause"
authors = [{ name = "Jannis Leidel", email = "jannis@leidel.info" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = ["conda >=25.1"]

[project.urls]
repository = "https://github.com/jezdez/conda-pronto"

[project.entry-points.conda]
conda-pronto = "conda_pronto.plugin"

[tool.hatch.build.targets.wheel]
packages = ["python/conda_pronto"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
addopts = "-ra"

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "FA",
  "I",
  "ISC",
  "RUF100",
  "T10",
  "TCH",
  "UP",
  "W",
]

[tool.ruff.lint.flake8-type-checking]
exempt-modules = []
strict = true
